--- a/_includes/header.html
+++ b/_includes/header.html
@@ -19,16 +19,16 @@
         <a href="/">Home</a>
       </li>
       <li>
-        <a href="/about.html">About</a>
+        <a href="{{ site.baseurl }}/about.html">About</a>
       </li>
       <li>
-        <a href="/blog.html">Blog</a>
+        <a href="{{ site.baseurl }}/blog.html">Blog</a>
       </li>
       <li>
-        <a href="/team.html">Team</a>
+        <a href="{{ site.baseurl }}/team.html">Team</a>
       </li>
       <li>
-        <a href="/contact.html"><span>Contact</span></a>
+        <a href="{{ site.baseurl }}/contact.html"><span>Contact</span></a>
       </li>
     </ul>         
   </div>
