Modify Header and Footer
Still need to update Font Awesome and related Icons.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,7 +7,7 @@
         <p class="footer-contact">
           {{ site.company_name }} <br>
           Phone: {{ site.telephone_number }} <br>
-          Fax: {{ site.fax_number }} <br>
+          <!-- Fax: {{ site.fax_number }} <br> -->
           Email: {{ site.company_email }}<br>
         </p>
       </div>
@@ -22,7 +22,7 @@
       <div class="col-md-4">
         <h3><i class="fa fa-heart"></i> Socialize</h3>
         <div id="social-icons">
-          {% if site.googleplus_link %}
+          <!-- {% if site.googleplus_link %}
             <a href="{{ site.googleplus_link }}" class="btn-group google-plus">
               <i class="fa fa-google-plus"></i>
             </a>
@@ -36,9 +36,9 @@
 
           {% if site.facebook_link %}
             <a href="{{ site.twitter_link }}" class="btn-group twitter">
-              <i class="fa fa-twitter"></i>
+              <i class="fa fa-"></i>
             </a>
-          {% endif %}
+          {% endif %} -->
 
           {% if site.facebook_link %}
             <a href="{{ site.facebook_link }}" class="btn-group facebook">
@@ -51,6 +51,6 @@
   </div>
 
   <div class="copyright text center">
-    <p>&copy; Copyright {{ site.time | date: '%Y' }}, <a href="#">Your Website Link</a>.</p>
+    <p>&copy; Copyright {{ site.time | date: '%Y' }}, Pierce's Paw Paradise, LLC, All Rights Reserved.</p>
   </div>
 </footer>
