--- a/_includes/header.html
+++ b/_includes/header.html
@@ -19,6 +19,9 @@
         <a href="{{ site.baseurl }}/index.html">Home</a>
       </li>
       <li>
+        <a href="{{ site.baseurl }}/store.html">Store</a>
+      </li>
+      <li>
         <a href="{{ site.baseurl }}/about.html">About</a>
       </li>
       <li>
