Home content edits
Just some minor changes for testing.  Make it less of the template and more of our store site.

--- a/_layouts/home_style.html
+++ b/_layouts/home_style.html
@@ -25,8 +25,8 @@
                         <div class="item active">
                             <img src="{{ site.baseurl }}/assets/img/slider/slide2.jpg" height="400" alt="Image of first carousel">
                             <div class="carousel-caption">
-                                <h3 class="carousel-title hidden-xs">Office BOOTSTRAP TEMPLATE</h3>
-                                <p class="carousel-body">RESPONSIVE \ MULTI PAGE</p>
+                                <h3 class="carousel-title hidden-xs">Shop our Store!</h3>
+                                <p class="carousel-body">Curated selection of pet products by Rachel Pierce!</p>
                             </div>
                         </div>
                         <!-- End Slide 1 -->
@@ -35,8 +35,8 @@
                         <div class="item">
                             <img src="{{ site.baseurl }}/assets//img/slider/slide4.jpg" height="400" alt="Image of second carousel">
                             <div class="carousel-caption">
-                                <h3 class="carousel-title hidden-xs">EASY TO CUSTOMIZE</h3>
-                                <p class="carousel-body">BEAUTIFUL \ CLEAN \ MINIMAL</p>
+                                <h3 class="carousel-title hidden-xs">Meet our Family</h3>
+                                <p class="carousel-body">It takes a village to raise a family, and it takes a family to run a store!</p>
                             </div>
                         </div>
                         <!-- End Slide 2 -->
@@ -45,8 +45,8 @@
                         <div class="item">
                             <img src="{{ site.baseurl }}/assets//img/slider/slide2.jpg" height="400" alt="Image of third carousel">
                             <div class="carousel-caption">
-                                <h3 class="carousel-title hidden-xs">MULTI-PURPOSE TEMPLATE</h3>
-                                <p class="carousel-body">PORTFOLIO \ CORPORATE \ CREATIVE</p>
+                                <h3 class="carousel-title hidden-xs">Check Out Our Product Reviews</h3>
+                                <p class="carousel-body">In depth reviews of products by our team of expert (pets)!</p>
                             </div>
                         </div>
                         <!-- End Slide 3 -->
@@ -71,8 +71,8 @@
         <div class="container">
             <div class="row">
                 <div class="services-header">
-                    <h3 class="services-header-title">Our Mission</h3>
-                    <p class="services-header-body"><em> Things we provide in Office </em>  </p><hr>
+                    <h3 class="services-header-title">Pierce's Paw Paradise</h3>
+                    <p class="services-header-body"><em> More than just a pet supply store!</em>  </p><hr>
                 </div>
             </div>
       
@@ -81,8 +81,8 @@
                 <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
                     <div class="services-group wow animated fadeInLeft" data-wow-offset="40">
                         <p class="services-icon"><span class="fa fa-android fa-5x"></span></p>
-                        <h4 class="services-title">Android</h4>
-                        <p class="services-body">Cras interdum placerat libero vel tempor. Curabitur gravida iaculis erat quis dignissim.</p>
+                        <h4 class="services-title">Dog Products</h4>
+                        <p class="services-body">Everything you need to keep your puppy or adult dog happy!</p>
                         <p class="services-more"><a href="#">Find Out More</a></p>
                     </div>
                 </div>
@@ -90,8 +90,8 @@
                 <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
                     <div class="services-group wow animated zoomIn" data-wow-offset="40">
                         <p class="services-icon"><i class="fa fa-apple fa-5x"></i></p>
-                        <h4 class="services-title">Apple</h4>
-                        <p class="services-body">Cras interdum placerat libero vel tempor. Curabitur gravida iaculis erat quis dignissim.</p>
+                        <h4 class="services-title">Cat Products</h4>
+                        <p class="services-body">Something your cat will love, or something that will annoy your cat?  We have both!</p>
                         <p class="services-more"><a href="#">Find Out More</a></p>
                     </div>
                 </div>
@@ -99,8 +99,8 @@
                 <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
                     <div class="services-group wow animated fadeInRight" data-wow-offset="40">
                         <p class="services-icon"><i class="fa fa-thumbs-o-up fa-5x"></i></p>
-                        <h4 class="services-title">EASY TO USE</h4>
-                        <p class="services-body">Cras interdum placerat libero vel tempor. Curabitur gravida iaculis erat quis dignissim.</p>
+                        <h4 class="services-title">People Products</h4>
+                        <p class="services-body">Why should the pets have all the fun?  We have plenty for the humans too!</p>
                         <p class="services-more"><a href="#">Find Out More</a></p>
                     </div>        
                 </div>
@@ -112,8 +112,8 @@
                 <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
                     <div class="services-group wow animated fadeInLeft" data-wow-offset="40">
                         <p class="services-icon"><span class="fa fa-windows fa-5x"></span></p>
-                        <h4 class="services-title">Windows</h4>
-                        <p class="services-body">Cras interdum placerat libero vel tempor. Curabitur gravida iaculis erat quis dignissim.</p>
+                        <h4 class="services-title">Blog</h4>
+                        <p class="services-body">What is on Sprocket's mind?  How is Wesley adjusting?  Is Princess really a princess?</p>
                         <p class="services-more"><a href="#">Find Out More</a></p>
                     </div>
                 </div>
@@ -121,8 +121,8 @@
                 <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
                     <div class="services-group wow animated zoomIn" data-wow-offset="40">
                         <p class="services-icon"><i class="fa fa-eye fa-5x"></i></p>
-                        <h4 class="services-title">RETINA READY</h4>
-                        <p class="services-body">Cras interdum placerat libero vel tempor. Curabitur gravida iaculis erat quis dignissim.</p>
+                        <h4 class="services-title">Upcoming Events</h4>
+                        <p class="services-body">More than just products, we have events at our store and throughout the community.</p>
                         <p class="services-more"><a href="#">Find Out More</a></p>
                     </div>
                 </div>
@@ -130,8 +130,8 @@
                 <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
                     <div class="services-group wow animated fadeInRight" data-wow-offset="40">
                         <p class="services-icon"><i class="fa fa-cube fa-5x"></i></p>
-                        <h4 class="services-title">Cubic</h4>
-                        <p class="services-body">Cras interdum placerat libero vel tempor. Curabitur gravida iaculis erat quis dignissim.</p>
+                        <h4 class="services-title">Reviews!</h4>
+                        <p class="services-body">Dont take our word for it, check out what people are saying about Pierce's Paw Paradise.</p>
                         <p class="services-more"><a href="#">Find Out More</a></p>
                     </div>
                 </div>
