--- a/_layouts/home_style.html
+++ b/_layouts/home_style.html
@@ -80,7 +80,7 @@
             <div class="row services-row services-row-head services-row-1">
                 <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
                     <div class="services-group wow animated fadeInLeft" data-wow-offset="40">
-                        <p class="services-icon"><span class="fa fa-android fa-5x"></span></p>
+                        <p class="services-icon"><span class="fa-solid fa-dog fa-4x"></span></p>
                         <h4 class="services-title">Dog Products</h4>
                         <p class="services-body">Everything you need to keep your puppy or adult dog happy!</p>
                         <p class="services-more"><a href="#">Find Out More</a></p>
@@ -89,7 +89,7 @@
         
                 <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
                     <div class="services-group wow animated zoomIn" data-wow-offset="40">
-                        <p class="services-icon"><i class="fa fa-apple fa-5x"></i></p>
+                        <p class="services-icon"><i class="fa-solid fa-cat fa-4x"></i></p>
                         <h4 class="services-title">Cat Products</h4>
                         <p class="services-body">Something your cat will love, or something that will annoy your cat?  We have both!</p>
                         <p class="services-more"><a href="#">Find Out More</a></p>
@@ -98,7 +98,7 @@
         
                 <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
                     <div class="services-group wow animated fadeInRight" data-wow-offset="40">
-                        <p class="services-icon"><i class="fa fa-thumbs-o-up fa-5x"></i></p>
+                        <p class="services-icon"><i class="fa-solid fa-people-group fa-4x"></i></p>
                         <h4 class="services-title">People Products</h4>
                         <p class="services-body">Why should the pets have all the fun?  We have plenty for the humans too!</p>
                         <p class="services-more"><a href="#">Find Out More</a></p>
@@ -111,7 +111,7 @@
             <div class="row services-row services-row-tail services-row-2">
                 <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
                     <div class="services-group wow animated fadeInLeft" data-wow-offset="40">
-                        <p class="services-icon"><span class="fa fa-windows fa-5x"></span></p>
+                        <p class="services-icon"><span class="fa-solid fa-blog fa-4x"></span></p>
                         <h4 class="services-title">Blog</h4>
                         <p class="services-body">What is on Sprocket's mind?  How is Wesley adjusting?  Is Princess really a princess?</p>
                         <p class="services-more"><a href="#">Find Out More</a></p>
@@ -120,7 +120,7 @@
         
                 <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
                     <div class="services-group wow animated zoomIn" data-wow-offset="40">
-                        <p class="services-icon"><i class="fa fa-eye fa-5x"></i></p>
+                        <p class="services-icon"><i class="fa-solid fa-calendar-days fa-4x"></i></p>
                         <h4 class="services-title">Upcoming Events</h4>
                         <p class="services-body">More than just products, we have events at our store and throughout the community.</p>
                         <p class="services-more"><a href="#">Find Out More</a></p>
@@ -129,7 +129,7 @@
         
                 <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
                     <div class="services-group wow animated fadeInRight" data-wow-offset="40">
-                        <p class="services-icon"><i class="fa fa-cube fa-5x"></i></p>
+                        <p class="services-icon"><i class="fa-solid fa-pen-nib fa-4x"></i></p>
                         <h4 class="services-title">Reviews!</h4>
                         <p class="services-body">Dont take our word for it, check out what people are saying about Pierce's Paw Paradise.</p>
                         <p class="services-more"><a href="#">Find Out More</a></p>
