--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,7 +3,7 @@
   <div class="container">
     <div class="row">
       <div class="col-md-4">
-        <h3><i class="fa fa-map-marker"></i> Contact:</h3>
+        <h3><i class="fa-solid fa-feather"></i> Contact:</h3>
         <p class="footer-contact">
           {{ site.company_name }} <br>
           Phone: {{ site.telephone_number }} <br>
@@ -12,41 +12,38 @@
         </p>
       </div>
       <div class="col-md-4">
-        <h3><i class="fa fa-external-link"></i> Links</h3>
+        <h3><i class="fa fa-external-link-alt"></i> Links</h3>
         <p><a href="{{ site.baseurl }}/about"> About ( Who we are )</a></p>
         <p><a href="{{ site.baseurl }}/about"> Services ( What we do )</a></p>
         <p><a href="{{ site.baseurl }}/contact"> Contact ( Feel free to contact )</a></p>
         <p><a href="{{ site.baseurl }}/blog"> Blog ( Write to us )</a></p>
         <p><a href="{{ site.baseurl }}/team"> Team ( Meet the Team )</a></p> 
       </div>
-      <div class="col-md-4">
-        <h3><i class="fa fa-heart"></i> Socialize</h3>
+        <div class="col-md-4">
+        <h3><i class="fas fa-heart"></i> Socialize</h3>
         <div id="social-icons">
-          <!-- {% if site.googleplus_link %}
-            <a href="{{ site.googleplus_link }}" class="btn-group google-plus">
-              <i class="fa fa-google-plus"></i>
-            </a>
-          {% endif %}
-
-          {% if site.linkedin_link %}
-            <a href="{{ site.linkedin_link }}" class="btn-group linkedin">
-              <i class="fa fa-linkedin-square"></i>
-            </a>
-          {% endif %}
-
-          {% if site.facebook_link %}
-            <a href="{{ site.twitter_link }}" class="btn-group twitter">
-              <i class="fa fa-"></i>
-            </a>
-          {% endif %} -->
-
           {% if site.facebook_link %}
             <a href="{{ site.facebook_link }}" class="btn-group facebook">
-              <i class="fa fa-facebook"></i>
+              <i class="fab fa-facebook-f"></i>
+            </a>
+          {% endif %}
+          {% if site.twitter_link %}
+            <a href="{{ site.twitter_link }}" class="btn-group twitter">
+              <i class="fab fa-x-twitter"></i>
+            </a>
+          {% endif %}
+          {% if site.instagram_link %}
+            <a href="{{ site.instagram_link }}" class="btn-group instagram">
+              <i class="fab fa-instagram"></i>
+            </a>
+          {% endif %}
+          {% if site.linkedin_link %}
+            <a href="{{ site.linkedin_link }}" class="btn-group linkedin">
+              <i class="fab fa-linkedin-in"></i>
             </a>
           {% endif %}
         </div>
-      </div>    
+      </div>
     </div>
   </div>
 
