--- a/_includes/head.html
+++ b/_includes/head.html
@@ -16,7 +16,7 @@
   <link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet" type="text/css">
   <link rel="stylesheet" href="{{ site.baseurl }}/assets/bootstrap/css/bootstrap.css">
-  <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/font-awesome.min.css">
+  <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/font-awesome.css" />
   <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/animate.min.css">
   <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/style.css">
 </head>
