About page edits
Along with removing Team page.

--- a/_layouts/home_style.html
+++ b/_layouts/home_style.html
@@ -83,7 +83,7 @@
                         <p class="services-icon"><span class="fa-solid fa-dog fa-4x"></span></p>
                         <h4 class="services-title">Dog Products</h4>
                         <p class="services-body">Everything you need to keep your puppy or adult dog happy!</p>
-                        <p class="services-more"><a href="#">Find Out More</a></p>
+                        <p class="services-more"><a href="#">Shop Now!</a></p>
                     </div>
                 </div>
         
@@ -92,7 +92,7 @@
                         <p class="services-icon"><i class="fa-solid fa-cat fa-4x"></i></p>
                         <h4 class="services-title">Cat Products</h4>
                         <p class="services-body">Something your cat will love, or something that will annoy your cat?  We have both!</p>
-                        <p class="services-more"><a href="#">Find Out More</a></p>
+                        <p class="services-more"><a href="#">Shop Now!</a></p>
                     </div>
                 </div>
         
@@ -101,7 +101,7 @@
                         <p class="services-icon"><i class="fa-solid fa-people-group fa-4x"></i></p>
                         <h4 class="services-title">People Products</h4>
                         <p class="services-body">Why should the pets have all the fun?  We have plenty for the humans too!</p>
-                        <p class="services-more"><a href="#">Find Out More</a></p>
+                        <p class="services-more"><a href="#">Shop Now!</a></p>
                     </div>        
                 </div>
             </div>
@@ -121,9 +121,9 @@
                 <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
                     <div class="services-group wow animated zoomIn" data-wow-offset="40">
                         <p class="services-icon"><i class="fa-solid fa-calendar-days fa-4x"></i></p>
-                        <h4 class="services-title">Upcoming Events</h4>
-                        <p class="services-body">More than just products, we have events at our store and throughout the community.</p>
-                        <p class="services-more"><a href="#">Find Out More</a></p>
+                        <h4 class="services-title">Pet Picks!</h4>
+                        <p class="services-body">Honest reviews by our team of expert pets:  Sprocket, Wesley, Princess, and Danny!</p>
+                        <p class="services-more"><a href="#">Shop Now!</a></p>
                     </div>
                 </div>
         
