Minor mods to block section links

--- a/_layouts/home_style.html
+++ b/_layouts/home_style.html
@@ -120,10 +120,10 @@
         
                 <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
                     <div class="services-group wow animated zoomIn" data-wow-offset="40">
-                        <p class="services-icon"><i class="fa-solid fa-calendar-days fa-4x"></i></p>
+                        <p class="services-icon"><i class="fa-solid fa-check-double fa-4x"></i></p>
                         <h4 class="services-title">Pet Picks!</h4>
                         <p class="services-body">Honest reviews by our team of expert pets:  Sprocket, Wesley, Princess, and Danny!</p>
-                        <p class="services-more"><a href="#">Shop Now!</a></p>
+                        <p class="services-more"><a href="http://127.0.0.1:4000/pierces-paw-paradise/store.html#!/Sprockets-Picks/c/179076256">Shop Now!</a></p>
                     </div>
                 </div>
         
@@ -132,7 +132,7 @@
                         <p class="services-icon"><i class="fa-solid fa-pen-nib fa-4x"></i></p>
                         <h4 class="services-title">Reviews!</h4>
                         <p class="services-body">Dont take our word for it, check out what people are saying about Pierce's Paw Paradise.</p>
-                        <p class="services-more"><a href="#">Find Out More</a></p>
+                        <p class="services-more"><a href="https://www.google.com/search?sca_esv=263d6f8b3f719809&si=AMgyJEtREmoPL4P1I5IDCfuA8gybfVI2d5Uj7QMwYCZHKDZ-EyxObQ1CQRqwA2NLeIp6ZPkS2hbvi7S1952JLCQHGkR9DAaIpZHcB54dJg_n-tpigOr0fZ8gGlLFsDWEzFByPVi_YqpREgVIQCJcO7ZrMCzi9O5IwA%3D%3D&q=Pierce%27s+Paw+Paradise+Reviews&sa=X&ved=2ahUKEwiOydOgiqaPAxVzVTABHe0bDIUQ0bkNegQIJRAE&biw=1414&bih=1276&dpr=1" target="_blank">Find Out More</a></p>
                     </div>
                 </div>
             </div>
