--- a/_layouts/home_style.html
+++ b/_layouts/home_style.html
@@ -123,7 +123,7 @@
                         <p class="services-icon"><i class="fa-solid fa-check-double fa-4x"></i></p>
                         <h4 class="services-title">Pet Picks!</h4>
                         <p class="services-body">Honest reviews by our team of expert pets:  Sprocket, Wesley, Princess, and Danny!</p>
-                        <p class="services-more"><a href="http://127.0.0.1:4000/pierces-paw-paradise/store.html#!/Sprockets-Picks/c/179076256">Shop Now!</a></p>
+                        <p class="services-more"><a href="https://piercespawparadise.com/products/Sprockets-Picks-c179076256">Shop Now!</a></p>
                     </div>
                 </div>
         
